# qdex

./: .env.example  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  package-lock.json  package.json
electron/: main.cjs  preload.cjs
renderer/: bridge.js  index.html  renderer.js  styles.css
scripts/: apply-win-icon.mjs  fetch-assets.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
supertonic/: helper.js
