[package]
name = "qdex"
version = "0.1.0"
description = "QDex Tauri prototype"
authors = ["QDex contributors"]
license = "GPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["process", "time"] }
uuid = { version = "1", features = ["v4"] }
